# rocket-app

./: Cargo.toml  Rocket.toml
migrations/2021-02-07-191039_create_rustaceans/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs
src/repositories/: repositories.rs
