[package]
name = "rocket-app"
version = "0.1.0"
authors = ["wcrowe <crowe.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0"
serde = {version = "1.0", features=["derive"]}
base64 = "0.13"
diesel= {version = "1.4", features=["sqlite","r2d2"]}
diesel_migrations = "1.4"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json", "diesel_sqlite_pool"]